# evercord

./: Cargo.toml  flake.nix
.direnv/: flake-profile-1-link
src/: main.rs
src/api/: mod.rs  post.rs
